# Autonomous-AI-

./: .agent_plugins.yaml  .env.example  .env.template  .gitignore  .pre-commit-config.yaml  API_DOCUMENTATION_IMPROVEMENTS.md  COMPREHENSIVE_ENTERPRISE_IMPLEMENTATION_SUMMARY.md  COMPREHENSIVE_ITERATION_ANALYSIS.md  COMPREHENSIVE_PROJECT_ANALYSIS.md  COMPREHENSIVE_PROJECT_ANALYSIS_REPORT.md  COMPREHENSIVE_PROJECT_REVIEW.md  DATABASE_MIGRATION_REPORT.md  DETAILED_MISSING_COMPONENTS_ANALYSIS.md  Dockerfile  ENHANCED_ANALYSIS_REPORT_WITH_FIXES.md  ENHANCEMENT_IMPLEMENTATION_SUMMARY.md  ENHANCEMENT_ITERATION_COMPLETE.txt  ENTERPRISE_IMPLEMENTATION_ROADMAP.md  ENTERPRISE_READINESS_ASSESSMENT.md  ENTERPRISE_SUMMARY.md  GEMINI_CLI_COMPARISON.md  HOME_USER_ENTERPRISE_AGENT_GUIDE.md  INDEPENDENT_COMPREHENSIVE_PROJECT_ANALYSIS.md  Makefile  PROJECT_ANALYSIS.md  README.md  TERMINAL_EMBEDDING_GUIDE.md  TRANSFORMATION_ROADMAP.md  alembic.ini  debug_auth.py  debug_openapi.py  deploy.py  docker-compose.yml  enterprise_demo.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_agent.py  test_comprehensive_auth.py  (+2 more)
agent_system/: agent.py  api_endpoints.py  api_schemas.py  auth_models.py  chat_cli.py  config_simple.py  cross_session_learning.py  data_migration.py  enhanced_persistence.py  enhanced_tools.py  fastapi_app.py  goal_manager.py  intelligent_action_selector.py  memory.py  models.py  (+6 more)
clean_project/: .gitignore  .pre-commit-config.yaml  DEPLOYMENT_ENV.md  ENHANCEMENTS_COMPLETE.md  LICENSE  Makefile  PRODUCTION_READINESS_CHECKLIST.md  README.md  REORGANIZATION_SUMMARY.md  conftest.py  graceful-shutdown.sh  mypy_current_report.txt  mypy_final_final_report.txt  mypy_final_report.txt  pyproject.toml  pytest.ini
clean_project/.github/workflows/: ci-cd.yml
clean_project/config/: Dockerfile  alembic.ini  constraints.txt  docker-compose.yml  requirements.txt
clean_project/config/alembic/: env.py
clean_project/config/alembic/versions/: 0001_initial.py
clean_project/config/monitoring/: alert_rules.yml  alertmanager.yml  prometheus.yml
clean_project/config/monitoring/grafana/dashboards/: agent-ai-performance.json  agent-system-health.json  agent-system-overview.json  job-throughput.json  worker-metrics.json
clean_project/config/monitoring/grafana/provisioning/dashboards/: dashboard.yml
clean_project/config/nginx/: nginx.conf
clean_project/docs/: ARCHITECTURE_DIAGRAMS.md  ENTERPRISE_SCALING_ROADMAP.md  INFRASTRUCTURE_IMPLEMENTATION_REPORT.md  PLUGIN_METADATA_PROVIDER_DOCUMENTATION.md  PRODUCTION_DEPLOYMENT_GUIDE.md  README.md  SECRET_MANAGEMENT.md  TRANSFORMATION_ROADMAP.md
clean_project/docs/adrs/: ADR-001-stateless-api-worker-separation.md  ADR-002-multi-agent-capability-discovery.md
clean_project/docs/analysis/: PROJECT_ITERATION_ANALYSIS.md
clean_project/k8s/: README.md  kustomization.yaml
clean_project/k8s/configmaps/: agent-config.yaml  redis-config.yaml
clean_project/k8s/deployments/: agent-api-deployment.yaml  hpa.yaml  persistent-volume-claims.yaml  redis-deployment.yaml  worker-deployments.yaml
clean_project/k8s/ingress/: agent-ingress.yaml
clean_project/k8s/istio/: gateway.yaml  istio-config.yaml
clean_project/k8s/security/: peer-authentication.yaml
clean_project/k8s/services/: agent-api-service.yaml  redis-service.yaml
clean_project/scripts/: auth_management.py  bootstrap_check.py  complete_system_validation.py  debug_auth.py  debug_openapi.py  demo_enhanced_capabilities.py  demo_real_tools.py  deploy.py  deploy_enterprise.py  distributed_worker.py  enterprise_demo.py  enterprise_validation.py  final_demo.py  grant_role.py  migrate_password_hashes.py  performance_benchmark.py  project_stress_tester.py  run_agent.py  search_providers_cli.py  test_api_documentation.py  test_api_endpoints.py  test_authentication_system.py  test_client.py  test_comprehensive_auth.py  test_enhanced_systems.py  test_final_api_improvements.py  test_infrastructure.py  test_integration.py  test_intelligence.py  test_openapi_schemas.py  verify_readiness.py
clean_project/src/agent_system/: __init__.py  action_selector.py  advanced_caching.py  advanced_monitoring.py  advanced_security.py  agent.py  agent_roles.py  ai_debugging.py  ai_performance_monitor.py  ai_planner.py  api_endpoints.py  api_schemas.py  api_schemas_metadata.py  api_security.py  async_utils.py  auth_models.py  auth_service.py  auth_setup.py  cache_manager.py  chat_cli.py  circuit_breaker.py  config.py  config_simple.py  cross_session_learning.py  data_migration.py  database_models.py  database_persistence.py  dependency_container.py  distributed_message_queue.py  distributed_state_manager.py  distributed_tracing.py  enhanced_agent.py  enhanced_persistence.py  enhanced_tools.py  enterprise_data_governance.py  enterprise_deployment.py  enterprise_integration.py  enterprise_persistence.py  enterprise_security_compliance.py  enterprise_testing.py  (+46 more)
clean_project/src/agent_system/project_analyzer/: __init__.py  ast_cache.py  incremental_parser.py  kernel_cache_manager.py  large_project_analyzer.py  memory_guard.py  memory_profiler.py  orchestrator_integration.py  specialization.py  stress_tester.py
clean_project/tests/: test_action_selector.py  test_agent_job_store.py  test_cli.py  test_distributed_architecture.py  test_distributed_integration.py  test_e2e_workflow.py  test_goal_manager.py  test_performance_benchmark.py  test_persistence_db.py  test_plugin_metadata_providers.py  test_project_analyzer.py  test_provider_config.py  test_provider_endpoints.py  test_rate_limiting.py  test_specialization_integration.py  test_tools.py
clean_project/tests/load/: test-api.js  test-config.js  test-websocket.js
clean_project/validation_results/: complete-system-validation.json  enterprise-validation-20251107-090504.json  enterprise-validation-20251107-092010.json  enterprise-validation-20251107-092041.json  enterprise-validation-20251107-092059.json  enterprise-validation-20251107-092114.json  enterprise-validation-20251110-145622.json  mypy_report.txt  mypy_report.xml  mypy_report_after_first_batch.xml
(+9 files in other folders)
