[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autonomous-agent-system"
version = "0.1.0"
description = "Terminal-first autonomous agent with tools, planning, and web dashboard"
readme = "README.md"
requires-python = ">=3.9"
authors = [{name = "Agent System"}]
license = {text = "MIT"}
dependencies = [
  "requests>=2.31.0",
  "python-dotenv>=1.0.0",
  "pydantic>=2.0.0",
  "pydantic-settings>=2.0.0",
  "fastapi>=0.104.0",
  "uvicorn>=0.24.0",
  "sqlalchemy>=2.0.0",
  "alembic>=1.12.0",
  "aiofiles>=23.0.0",
  "openai>=1.0.0",
  "anthropic>=0.7.0",
  "chromadb>=0.4.0",
  "cryptography>=41.0.0",
  "python-jose[cryptography]>=3.3.0",
  "structlog>=23.0.0",
  "prometheus-client>=0.19.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4.0",
  "pytest-asyncio>=0.21.0",
  "black>=23.0.0",
  "ruff>=0.1.0",
  "mypy>=1.6.0",
  "coverage>=7.3.0",
]

[project.scripts]
agent-chat = "agent_system.chat_cli:main"
agent-term = "agent_system.terminal_cli:main"
agent-run = "agent_system.__main__:main"

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 100
exclude = [
  "scripts",
  "config",
  "docs",
]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E203", "E266", "E501"]

[tool.ruff.lint.isort]
known-first-party = ["src.agent_system"]

[tool.pytest.ini_options]
addopts = "-q"

[tool.coverage.run]
branch = true
source = ["src.agent_system"]

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[[tool.mypy.overrides]]
module = "pydantic"
ignore_missing_imports = false

[[tool.mypy.overrides]]
module = "pydantic.*"
ignore_missing_imports = false

[[tool.mypy.overrides]]
module = "agent_system.api_security"
strict = true

[[tool.mypy.overrides]]
module = "agent_system.job_manager"
strict = true

[[tool.mypy.overrides]]
module = "agent_system.production_config"
strict = true

[[tool.mypy.overrides]]
module = "agent_system.config_simple"
strict = true

[[tool.mypy.overrides]]
module = "agent_system.unified_config"
strict = true

[[tool.mypy.overrides]]
module = "agent_system.distributed_message_queue"
strict = true

[[tool.mypy.overrides]]
module = "agent_system.advanced_monitoring"
strict = true

[[tool.mypy.overrides]]
module = "agent_system.enterprise_persistence"
strict = true

[[tool.mypy.overrides]]
module = "agent_system.persistence"
strict = true

[[tool.mypy.overrides]]
module = "agent_system.enhanced_persistence"
strict = true

# Temporarily relax only 'misc' errors (e.g., subclassing Any, untyped decorator) while migrating schemas
# mypy override for agent_system.api_schemas moved to file-level directive

# mypy override for agent_system.job_definitions moved to file-level directive
