[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autonomous-agent-system"
version = "0.1.0"
description = "Terminal-first autonomous agent with tools, planning, and web dashboard"
readme = "README.md"
requires-python = ">=3.9"
authors = [{name = "Agent System"}]
license = "MIT"
dependencies = [
  "requests>=2.31.0",
  "python-dotenv>=1.0.0",
  "pydantic>=2.0.0",
  "pydantic-settings>=2.0.0",
  "fastapi>=0.104.0",
  "uvicorn>=0.24.0",
  "sqlalchemy>=2.0.0",
  "alembic>=1.12.0",
  "aiofiles>=23.0.0",
  "openai>=1.0.0",
  "anthropic>=0.7.0",
  "chromadb>=0.4.0",
  "cryptography>=41.0.0",
  "python-jose[cryptography]>=3.3.0",
  "structlog>=23.0.0",
  "prometheus-client>=0.19.0",
  "redis>=5.0.0",
  "passlib[bcrypt]>=1.7.4",
  "argon2-cffi>=23.1.0",
  "psutil>=5.9.0",
  "rq>=1.15.1",
  "rq-scheduler>=0.13.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4.0",
  "pytest-asyncio>=0.21.0",
  "black>=23.0.0",
  "ruff>=0.1.0",
  "mypy>=1.6.0",
  "coverage>=7.3.0",
  "types-requests>=2.31.0.0",
]
ai = [
  "sentence-transformers>=2.2.0",
]

[project.scripts]
agent-chat = "agent_system.chat_cli:main"
agent-term = "agent_system.terminal_cli:main"
agent-run = "agent_system.__main__:main"

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 100
exclude = [
  "scripts",
  "config",
  "docs",
]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E203", "E266", "E501"]

[tool.ruff.lint.isort]
known-first-party = ["src.agent_system"]

[tool.pytest.ini_options]
addopts = "-q"

[tool.coverage.run]
branch = true
source = ["src.agent_system"]

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = false
warn_redundant_casts = true
warn_unused_configs = true
ignore_missing_imports = true
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]
no_implicit_optional = false
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
namespace_packages = true
explicit_package_bases = true
follow_imports = "skip"
mypy_path = "src"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[[tool.mypy.overrides]]
module = "pydantic"
ignore_missing_imports = false

# Temporarily ignore ORM typing errors while we migrate models to SQLAlchemy 2.0 typed mappings

# Also ignore for environments where module is seen under a 'src.' package base

# Also match modules when resolved without the "src." prefix
[[tool.mypy.overrides]]
module = "agent_system.auth_models"
ignore_errors = true

[[tool.mypy.overrides]]
module = "agent_system.database_models"
ignore_errors = true

[[tool.mypy.overrides]]
module = "pydantic.*"
ignore_missing_imports = false

[[tool.mypy.overrides]]
module = "agent_system.security_validator"
strict = true

# Incrementally tighten typing on auth_service
[[tool.mypy.overrides]]
module = "agent_system.auth_service"
strict = true

# Temporarily relax only 'misc' errors (e.g., subclassing Any, untyped decorator) while migrating schemas
# mypy override for agent_system.api_schemas moved to file-level directive

# mypy override for agent_system.job_definitions moved to file-level directive

# Environment-specific module names observed under mypy verbose output

[[tool.mypy.overrides]]
module = "clean_project.src.agent_system.api_schemas_metadata"
disable_error_code = ["misc"]

# Also cover non-prefixed module bases observed in reports
[[tool.mypy.overrides]]
module = "src.agent_system.api_schemas_metadata"
disable_error_code = ["misc"]

[[tool.mypy.overrides]]
module = "agent_system.api_schemas_metadata"
disable_error_code = ["misc"]

[[tool.mypy.overrides]]
module = "src.agent_system.config"
disable_error_code = ["misc"]

[[tool.mypy.overrides]]
module = "clean_project.src.agent_system.config"
disable_error_code = ["misc"]

[[tool.mypy.overrides]]
module = "agent_system.config"
disable_error_code = ["misc"]

[[tool.mypy.overrides]]
module = "agent_system.api_schemas_metadata"
disable_error_code = ["misc"]

# Temporarily relax Pydantic BaseModel subclassing issues in plugin metadata models
[[tool.mypy.overrides]]
module = "agent_system.plugin_metadata_models"
disable_error_code = ["misc"]

[[tool.mypy.overrides]]
module = "src.agent_system.plugin_metadata_models"
disable_error_code = ["misc"]

[[tool.mypy.overrides]]
module = "clean_project.src.agent_system.plugin_metadata_models"
disable_error_code = ["misc"]
